rich text - using non-deprecated @portabletext/to-html this time

--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "vite-tsconfig-paths": "4.2.0"
   },
   "dependencies": {
+    "@portabletext/to-html": "^2.0.5",
     "@sanity/client": "^6.4.9",
-    "qwik-image": "^0.0.8",
-    "@sanity/block-content-to-html": "^2.0.0"
+    "qwik-image": "^0.0.8"
   }
 }
