--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "autoprefixer": "^10.4.14",
     "eslint": "8.45.0",
     "eslint-plugin-qwik": "^1.2.10",
+    "flowbite": "^3.1.2",
+    "flowbite-qwik-icons": "^0.1.9",
     "postcss": "8.4.27",
     "prettier": "3.0.0",
     "tailwindcss": "3.3.3",
@@ -44,6 +46,7 @@
   "dependencies": {
     "@portabletext/to-html": "^2.0.5",
     "@sanity/client": "^6.4.9",
+    "flowbite-qwik": "^0.38.3",
     "qwik-image": "^0.0.8"
   }
 }
