--- a/package.json
+++ b/package.json
@@ -23,18 +23,26 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^1.2.10",
-    "@builder.io/qwik-city": "^1.2.10",
+    "@builder.io/qwik": "^1.12.1",
+    "@builder.io/qwik-city": "^1.12.1",
+    "@qwik-ui/headless": "^0.6.5",
+    "@qwik-ui/styled": "^0.3.0",
+    "@qwik-ui/utils": "^0.3.1",
+    "@qwikest/icons": "^0.0.13",
     "@types/eslint": "8.44.1",
     "@types/node": "^20.4.5",
     "@typescript-eslint/eslint-plugin": "6.2.0",
     "@typescript-eslint/parser": "6.2.0",
     "autoprefixer": "^10.4.14",
+    "class-variance-authority": "^0.7.0",
     "eslint": "8.45.0",
     "eslint-plugin-qwik": "^1.2.10",
+    "nx": "^20.6.4",
     "postcss": "8.4.27",
     "prettier": "3.0.0",
+    "qwik-ui": "^0.2.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.6",
     "undici": "5.22.1",
     "vercel": "^29.1.1",
@@ -44,6 +52,9 @@
   "dependencies": {
     "@portabletext/to-html": "^2.0.5",
     "@sanity/client": "^6.4.9",
-    "qwik-image": "^0.0.8"
-  }
+    "@supabase/supabase-js": "^2.49.4",
+    "qwik-image": "^0.0.16",
+    "supabase-auth-helpers-qwik": "^0.0.3"
+  },
+  "nx": {}
 }
