--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
+    "build.server": "vite build -c adapters/express/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "vercel deploy",
     "deploy.prod": "vercel deploy --prod",
@@ -19,6 +19,7 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
+    "serve": "node server/entry.express",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
@@ -29,13 +30,17 @@
     "@qwik-ui/styled": "^0.3.0",
     "@qwik-ui/utils": "^0.3.1",
     "@qwikest/icons": "^0.0.13",
+    "@types/compression": "^1.7.2",
     "@types/eslint": "8.44.1",
+    "@types/express": "^4.17.19",
     "@types/node": "^20.4.5",
     "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/eslint-plugin": "6.2.0",
     "@typescript-eslint/parser": "6.2.0",
     "autoprefixer": "^10.4.14",
     "class-variance-authority": "^0.7.0",
+    "compression": "^1.7.4",
+    "dotenv": "^16.3.2",
     "eslint": "8.45.0",
     "eslint-plugin-qwik": "^1.2.10",
     "nx": "^21.0.3",
@@ -54,6 +59,7 @@
     "@portabletext/to-html": "^2.0.5",
     "@sanity/client": "^6.4.9",
     "@supabase/supabase-js": "^2.49.4",
+    "express": "4.20.0",
     "nodemailer": "^7.0.3",
     "qwik-image": "^0.0.16",
     "supabase-auth-helpers-qwik": "^0.0.3"
