--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@sanity/client": "^6.4.9",
     "@supabase/supabase-js": "^2.49.4",
     "qwik-image": "^0.0.16",
+    "resend": "^4.5.1",
     "supabase-auth-helpers-qwik": "^0.0.3"
   },
   "nx": {}
