--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,14 @@
 {
   "headers": [
     {
+
+      "source": "/webhook/mollie",
+      "headers": [
+        {"key": "X-Frame-Options", "value": "DENY"},
+        {"key": "X-Content-Type-Options", "value": "nosniff"}
+      ]
+    },
+    {
       "source": "/build/(.*)",
       "headers": [
         {
