--- a/.env.local.example
+++ b/.env.local.example
@@ -8,4 +8,4 @@ RESEND_API_KEY=your_resend_api_key
 # Mollie Payment
 MOLLIE_API_KEY=your_mollie_api_key
 PUBLIC_APP_URL=https://your-app-domain.com
-MOLLIE_WEBHOOK_URL=https://your-app-domain.com/webhook/mollie
+MOLLIE_WEBHOOK_URL=https://your-app-domain.com/api/webhook/mollie
