--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "headers": [
     {
 
-      "source": "/webhook/mollie",
+      "source": "/api/webhook/mollie",
       "headers": [
         {"key": "X-Frame-Options", "value": "DENY"},
         {"key": "X-Content-Type-Options", "value": "nosniff"}
